# newsletter-prep-assistant

./: .coverage  .gitignore  README.md  pyproject.toml
src/: main.py
src/newsletter_prep/: cta.py  logic.py  renderer.py  sources.py
tests/: test_cta.py  test_logic.py  test_renderer.py  test_sources.py
