[project]
name = "newsletter-prep-assistant"
version = "0.1.0"
description = "Assemble raw materials for the weekly newsletter: blog post, recent finds, daily note highlights, and CTA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "local-first-common>=0.1.0",
    "python-frontmatter>=1.1.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", branch = "main" }

[tool.pytest.ini_options]
pythonpath = ["src"]
