[project]
name = "newsletter-prep-assistant"
version = "0.1.0"
description = "Assemble raw materials for the weekly newsletter: blog post, recent finds, daily note highlights, and CTA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "local-first-common>=0.1.0",
    "python-frontmatter>=1.1.0",
    "toml>=0.10.2",
    "typer>=0.24.1",
]

[project.scripts]
newsletter-prep = "newsletter_prep.logic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter_prep"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
local-first-common = {path = "../local-first-common", editable = true}

[tool.pytest.ini_options]
pythonpath = ["src"]
